src/test/deca/codegen/invalid/extension/debordementTas/TestDebQR.deca
//
//Description: Test de la l'agorithme QR
//Resulat: Matrice triangulaire sur la diagonale
#include "Matrice.decah"
{
    MatriceFloat m;
    MatriceFloat r;
    int[][] A = {{4,4,4,1},{3,5,2,1},{1,2,1,2},{1,1,5,5}};
    MatriceFloat f = new MatriceFloat();
    f.setInitInt(A, 4, 4);
    f.affichage();
    m = f.algorithmeQR(40);
    println("matrice triangulaire contenant une appox des vlp");
    m.affichage();
}
